changed to display marketplace version panel

--- a/tutorial_basics/MyCompany.MyProject.BasicTutorialExtension.csproj
+++ b/tutorial_basics/MyCompany.MyProject.BasicTutorialExtension.csproj
@@ -15,6 +15,12 @@
 	<None Update="manifest.json">
 		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	</None>
+	<None Update="wwwroot\index.html">
+	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</None>
+	<None Update="wwwroot\main.js">
+	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
